--- a/nonNix/tmux/plugins.conf
+++ b/nonNix/tmux/plugins.conf
@@ -25,7 +25,7 @@ set -g @continuum-restore 'on'
 set -g @continuum-save-interval '15'
 
 # catppuccin
-set -g @catppuccin_flavor "macchiato"
+set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_status_background "none"
 set -g @catppuccin_window_status_style "none"
 set -g @catppuccin_pane_status_enabled "off"
