--- a/nonNix/tmux/style.conf
+++ b/nonNix/tmux/style.conf
@@ -3,7 +3,7 @@ set -g status-right ""
 
 
 set -ga status-right "#[bg=default,fg=#{@thm_yellow}]#{?window_zoomed_flag,#{pane_current_command}  ,}"
-set -ga status-right "#{?client_prefix,#{#[bg=#{@thm_blue},fg=#{@thm_bg}]#S  },#{#[bg=default,fg=#{@thm_blue}]#S  }}"
+set -ga status-right "#{?client_prefix,#{#[bg=#{@thm_mauve},fg=#{@thm_bg}]#S  },#{#[bg=default,fg=#{@thm_mauve}]#S  }}"
 
 
 set -g status-left ""
